// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When curve frame has rendered Expect component 1 has rendered successfully 1`] = `
<div
  class="filter_container "
  data-testid="frameCurveOne"
>
  <div
    class="box_Outer bg-primaryGradient"
    style="padding: 2%;"
  >
    <div
      class="filter_container"
    >
      <div
        class="box_Inner bg-white"
      >
        <span>
          &lt;div}&gt;
                &lt;p&gt;Hello world&lt;/p&gt;
                &lt;p&gt;Hello world&lt;/p&gt;
                &lt;p&gt;Hello world&lt;/p&gt;
                &lt;p&gt;Hello world&lt;/p&gt;
            &lt;/div&gt;
        </span>
      </div>
    </div>
  </div>
  <svg
    height="0"
    style="visibility: hidden; position: absolute;"
    version="1.1"
    width="0"
    xmlns="http://www.w3.org/2000/svg"
  >
    <defs>
      <filter
        id="goo"
      >
        <fegaussianblur
          in="SourceGraphic"
          result="blur"
          stdDeviation="3"
        />
        <fecolormatrix
          in="blur"
          mode="matrix"
          result="goo"
          values="1 0 0 0 0 0 1 0 0 0 0 0 1 0 0 0 0 0 19 -9"
        />
        <fecomposite
          in="SourceGraphic"
          in2="goo"
          operator="atop"
        />
      </filter>
    </defs>
  </svg>
</div>
`;

exports[`When curve frame has rendered Expect component 2 has rendered successfully 1`] = `
<div
  class="filter_container "
  data-testid="frameCurveTwo"
>
  <div
    class="box_Outer bg-[#FFFFFF]"
    style="padding: 2%;"
  >
    <div
      class="filter_container"
    >
      <div
        class="box_Inner bg-white"
      >
        <span>
          &lt;div}&gt;
                &lt;p&gt;Hello world&lt;/p&gt;
                &lt;p&gt;Hello world&lt;/p&gt;
                &lt;p&gt;Hello world&lt;/p&gt;
                &lt;p&gt;Hello world&lt;/p&gt;
            &lt;/div&gt;
        </span>
      </div>
    </div>
  </div>
  <svg
    height="0"
    style="visibility: hidden; position: absolute;"
    version="1.1"
    width="0"
    xmlns="http://www.w3.org/2000/svg"
  >
    <defs>
      <filter
        id="goo"
      >
        <fegaussianblur
          in="SourceGraphic"
          result="blur"
          stdDeviation="3"
        />
        <fecolormatrix
          in="blur"
          mode="matrix"
          result="goo"
          values="1 0 0 0 0 0 1 0 0 0 0 0 1 0 0 0 0 0 19 -9"
        />
        <fecomposite
          in="SourceGraphic"
          in2="goo"
          operator="atop"
        />
      </filter>
    </defs>
  </svg>
</div>
`;
